web-app/manifests-secure/web-application-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: web-application-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-service
          servicePort: 9080
